test/bad/generics/print02.px

func f<T>(x: T) def
    print 'x', x

f(write)
